Tools/testing/prometheus/deploy_prometheus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: monitoring 
spec:
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prometheus
      deployment: prometheus
  template:
    metadata:
      labels:
        app: prometheus
        deployment: prometheus
    spec:
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      terminationGracePeriodSeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
        - name: data-volume
          persistentVolumeClaim:
            claimName: prometheus-monitoring-pro-pvc
      containers:
        - name: prometheus-server
          image: prom/prometheus:latest
          imagePullPolicy: "IfNotPresent"
          args:
            - --storage.tsdb.retention.time=2w
            - --storage.tsdb.retention.size=190GB
            - --config.file=/etc/config/prometheus.yml
            - --storage.tsdb.path=/data
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 4
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          resources:
            limits:
              cpu: 100m
              memory: 750Mi
            requests:
              cpu: 50m
              memory: 250Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
            - name: data-volume
              mountPath: /data
              subPath: ""
